balls register click

--- a/index.html
+++ b/index.html
@@ -7,17 +7,22 @@
       <link href="https://fonts.googleapis.com/css?family=Overlock:400,700" rel="stylesheet">
     </head>
     <body>
-      <h1>HUNGRY SHARKS</h1>
+      <!-- <h1>HUNGRY SHARKS</h1> -->
       <div id="canvas-and-controls">
-        <div id="stats-box">
+        <!-- <div id="stats-box">
           <ul class="stats">
             <li id="round">Round</li>
             <li id="fish-box">fish box</li>
             <li id="timer">timer</li>
           </ul>
-        </div>
+        </div> -->
         <canvas id="canvas"></canvas>
         <div id="controls">
+          <div class="pause"
+          onclick=""
+          >
+            Pause
+          </div>
         </div>
       </div>
       <footer class="footer">
