--- a/index.html
+++ b/index.html
@@ -17,11 +17,18 @@
           </ul>
         </div> -->
         <canvas id="canvas"></canvas>
-        <div id="controls">
+        <div class="controls">
+          <div class="about"
+            onclick="">
+            <img src="http://res.cloudinary.com/dbsxgncvx/image/upload/c_scale,w_200/v1479320947/download_341152_h2opoy.png" />
+          </div>
           <div class="pause"
-          onclick=""
-          >
-            Pause
+            onclick="window.gameView.playPause()">
+            <img src="http://res.cloudinary.com/dbsxgncvx/image/upload/c_scale,h_200,w_200/v1479320463/play-pause_ssizw4.png"  />
+          </div>
+          <div class="mute"
+            onclick="">
+            <img src="http://res.cloudinary.com/dbsxgncvx/image/upload/v1479321178/17533-audio-control-button1-200x200_wfcg6n.png" />
           </div>
         </div>
       </div>
