--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
       <div id="canvas-and-controls">
         <div id="stats-box">
           <ul class="stats">
-            <li id="round">Round</li>
-            <li id="fish-box">fish box</li>
-            <li id="timer">timer</li>
+            <li id="level"></li>
+            <li id="remaining-clicks"></li>
+            <li id="timer"></li>
           </ul>
         </div>
         <canvas id="canvas"></canvas>
+        <audio id="soundEfx" src="pop.wav" style="display: none;"></audio>
         <div class="controls">
           <div id="about">
             <img src="http://res.cloudinary.com/dbsxgncvx/image/upload/c_scale,w_200/v1479320947/download_341152_h2opoy.png" />
