--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <div class="modal-content">
                 <span id="close">x</span>
                 <p>
-                  Clicky Balls is a brain game designed to increase the player's ability to multitask.
+                  Hungry Sharks is a brain game designed to increase the player's ability to multitask.
                   <br/>
                   <br/>
                   How to play:
