fish cursor, new background image, modify modals

--- a/index.html
+++ b/index.html
@@ -45,24 +45,28 @@
             <img src="http://res.cloudinary.com/dbsxgncvx/image/upload/c_scale,w_200/v1479320947/download_341152_h2opoy.png" />
             <div id="myModal" class="modal">
               <div class="modal-content-about">
-                <span id="close">x</span>
                 <p>
-                  Hungry Sharks is a brain game designed to increase the player's ability to multitask.
+                  WELCOME TO HUNGRY SHARKS!
                   <br/>
                   <br/>
                   How to play:
                   <br/>
-                  <br/>
-                  Identical balls roam the screen in random directions and speeds.
-                  In order to be successful, the player must keep track of which balls they have already clicked and which ones they have not.
-                  Click each ball once to move on the next level. If the click was successful, it will temporarily glow green. If the players clicks on the same ball twice, the round is lost and the game will restart.
-                  With each level, another ball is added.
+                  <span>Click a shark to feed it a fish while keeping track of which sharks you have already fed and which are still hungry.
+                  If you feed the same shark twice, you lose. Feed each shark once to move on the next level. With each level, another shark is added.
+                  </span>
                   <br/>
                   <br/>
                   Rules:
                   <br/>
+                  <span>
+                  The player must wait three seconds in between feedings. The timer will let you know when you can feed again.
+                  </span>
                   <br/>
-                  The player must wait three seconds in between clicks for a click to successfully register. There will be a timer to let the user know when you can click again.</p>
+                  <br/>
+                  <span id="play">
+                  Play
+                  </span>
+                </p>
               </div>
             </div>
           </div>
@@ -76,9 +80,9 @@
                 <p>
                   Are you new to Hungry Sharks? Please click the question mark to learn how to play. And remember, sharks are our friends.
                 </p>
-                <span id="play">
+                <span id="backtogame">
                 Back to the Game
-              </span>
+                </span>
               </div>
             </div>
           </div>
