change images to https

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <audio id="soundHello" src="sounds/hello.wav" style="display: none;"></audio>
         <div class="controls">
           <div id="about">
-            <img src="http://res.cloudinary.com/dbsxgncvx/image/upload/c_scale,w_200/v1479320947/download_341152_h2opoy.png" />
+            <img src="https://res.cloudinary.com/dbsxgncvx/image/upload/c_scale,w_200/v1479320947/download_341152_h2opoy.png" />
             <div id="myModal" class="modal">
               <div class="modal-content-about">
                 <p>
@@ -71,7 +71,7 @@
             </div>
           </div>
           <div id="pause">
-            <img src="http://res.cloudinary.com/dbsxgncvx/image/upload/c_scale,h_200,w_200/v1479320463/play-pause_ssizw4.png"  />
+            <img src="https://res.cloudinary.com/dbsxgncvx/image/upload/c_scale,h_200,w_200/v1479320463/play-pause_ssizw4.png"  />
             <div id="pauseModal" class="modal">
               <div class="modal-content-pause">
                 <p>
@@ -87,7 +87,7 @@
             </div>
           </div>
           <div id="mute">
-            <img src="http://res.cloudinary.com/dbsxgncvx/image/upload/v1479321178/17533-audio-control-button1-200x200_wfcg6n.png" />
+            <img src="https://res.cloudinary.com/dbsxgncvx/image/upload/v1479321178/17533-audio-control-button1-200x200_wfcg6n.png" />
           </div>
         </div>
       </div>
